Aded login credentials

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 type="text"
                 name="email"
                 id="email"
+                value="admin"
                 placeholder="أدخل هنا"
               />
             </div>
@@ -61,6 +62,7 @@
                 type="password"
                 name="password"
                 id="password"
+                value="admin"
                 placeholder="أدخل كلمة المرور"
               />
             </div>
