Responsivness tips added

--- a/export.html
+++ b/export.html
@@ -22,7 +22,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -36,7 +36,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                   />
@@ -45,7 +45,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -59,7 +59,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -69,7 +69,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -83,7 +83,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -152,13 +152,15 @@
         <aside>
           <div class="top-options">
             <div class="back-arrow">
-              <a href="./"><img src="assets/arrow.png" alt="arrow" /></a>
+              <a href="./homepage.html"
+                ><img src="./assets/arrow.png" alt="arrow"
+              /></a>
             </div>
             <div class="logo-cont">
-              <a href="">
-                <img src="assets/Group 2.png" alt="logo" />
+              <a href="./homepage.html">
+                <img src="./assets/Group 2.png" alt="logo" />
                 <img
-                  src="assets/Group 3.png"
+                  src="./assets/Group 3.png"
                   alt="name"
                   class="name"
                   style="max-width: 60%"
@@ -167,7 +169,7 @@
             </div>
           </div>
           <div class="user-info">
-            <img src="assets/Avatar.png" alt="Avatar" />
+            <img src="./assets/Avatar.png" alt="Avatar" />
             <div class="user-name">
               <p>أحمد أحمد</p>
               <p>المدير العام</p>
@@ -183,45 +185,45 @@
           <div class="tabs">
             <ul>
               <li>
-                <img src="assets/home.png" />
+                <img src="./assets/home.png" />
                 <a href="./homepage.html"> الرئيسية</a>
               </li>
               <li>
-                <img src="assets/directbox-receive.png" />
+                <img src="./assets/directbox-receive.png" />
                 <a href="./inbox.html">البريد الوارد</a>
               </li>
               <li>
-                <img src="assets/directbox-send.png" />
+                <img src="./assets/directbox-send.png" />
                 <a href="./sent.html">البريد الصادر</a>
                 <span>1</span>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./new-missions.html">المهام الجديدة</a>
               </li>
               <li>
-                <img src="assets/stickynote.png" />
+                <img src="./assets/stickynote.png" />
                 <a href="./draft.html">المسودة</a>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./publicity.html">التعميمات</a>
               </li>
               <li>
-                <img src="assets/document.png" />
+                <img src="./assets/document.png" />
                 <a href="./forwarded-tasks.html">متابعة المهام المحولة</a>
               </li>
               <li>
-                <img src="assets/search.png" />
+                <img src="./assets/search.png" />
                 <a href="./search-admin-files.html"> بحث</a>
               </li>
               <li>
-                <img src="assets/note.png" />
+                <img src="./assets/note.png" />
                 <a href="./records.html">التقارير</a>
               </li>
             </ul>
             <div class="signout">
-              <img src="assets/Logout.png" />
+              <img src="./assets/Logout.png" />
               <a href="">تسجيل الخروج</a>
             </div>
           </div>
@@ -231,23 +233,23 @@
           <div class="nav" style="border-bottom: 1px solid #eee">
             <div class="time-wrapper">
               <div class="time">
-                <img src="assets/clock.png" alt="clock" />
+                <img src="./assets/clock.png" alt="clock" />
                 <span>12:46:43 PM</span>
               </div>
               <div class="date">
-                <img src="assets/calendar.png" alt="calendar" />
+                <img src="./assets/calendar.png" alt="calendar" />
                 <span>01-01-2025</span>
               </div>
             </div>
             <div class="help">
-              <a href=""><img src="assets/question.png" alt="question" /></a>
+              <a href=""><img src="./assets/question.png" alt="question" /></a>
               <a href=""
-                ><img src="assets/support_svgrepo.com.png" alt="support"
+                ><img src="./assets/support_svgrepo.com.png" alt="support"
               /></a>
               <div>
                 <img
                   class="notify"
-                  src="assets/notification.png"
+                  src="./assets/notification.png"
                   alt="support"
                 />
               </div>
@@ -262,11 +264,11 @@
             <div class="save">
               <div>
                 <a href="">حفظ في مسودة</a>
-                <img src="assets/stickynote.png" />
+                <img src="./assets/stickynote.png" />
               </div>
               <div>
                 <a href="./revision-and-send.html">الذهاب للمراجعة</a>
-                <img src="assets/send.png" />
+                <img src="./assets/send.png" />
               </div>
             </div>
           </div>
@@ -278,7 +280,6 @@
                 <p>بيانات الكتاب</p>
               </div>
               <form action="" class="export-form">
-                <!-- Row Input -->
                 <div class="inputs-row">
                   <div class="input-cont">
                     <label for="type">نوع الوثيقة</label>
@@ -299,8 +300,6 @@
                     />
                   </div>
                 </div>
-                <!-- End Row Input -->
-                <!-- Row Input -->
                 <div class="inputs-row">
                   <div class="input-cont">
                     <label for="transaction">تاريخ المعاملة</label>
@@ -316,8 +315,6 @@
                     <input type="date" name="book" id="book" dir="ltr" />
                   </div>
                 </div>
-                <!-- End Row Input -->
-                <!-- Row Input -->
                 <div class="inputs-row">
                   <div class="input-cont">
                     <label for="subject">الموضوع</label>
@@ -334,8 +331,7 @@
                     </select>
                   </div>
                 </div>
-                <!-- End Row Input -->
-                <!-- Row Input -->
+
                 <div class="inputs-row">
                   <div class="input-cont">
                     <label for="notes">الملاحظات</label>
@@ -347,8 +343,7 @@
                     />
                   </div>
                 </div>
-                <!-- End Row Input -->
-                <!-- Row Input -->
+
                 <div class="inputs-row" style="width: 100%">
                   <div class="input-cont">
                     <label for="recieve">طريقة الاستلام</label>
@@ -367,18 +362,16 @@
                     />
                   </div>
                 </div>
-                <!-- End Row Input -->
-                <!-- Row Input -->
                 <div class="inputs-row" style="width: 100%">
                   <div class="input-cont">
                     <p class="receive-title">المستلمين</p>
                     <div class="receivers">
                       <div class="single-receiver">
                         <div class="receiver-details">
-                          <img src="assets/person.png" alt="person" />
+                          <img src="./assets/person.png" alt="person" />
                           <p>احمد احمد</p>
                         </div>
-                        <img src="assets/close 2.png" alt="close" />
+                        <img src="./assets/close 2.png" alt="close" />
                       </div>
                     </div>
                   </div>
@@ -400,23 +393,23 @@
                 <div class="files">
                   <div class="file">
                     <div class="img-details">
-                      <img src="assets/exchange.png" alt="exchange" />
+                      <img src="./assets/exchange.png" alt="exchange" />
                       <div class="file-details">
                         <p class="filename">filename.pdf</p>
                         <p class="filesize">500kb</p>
                       </div>
                     </div>
-                    <img src="assets/close.png" alt="close" />
+                    <img src="./assets/close.png" alt="close" />
                   </div>
                   <div class="file">
                     <div class="img-details">
-                      <img src="assets/exchange.png" alt="exchange" />
+                      <img src="./assets/exchange.png" alt="exchange" />
                       <div class="file-details">
                         <p class="filename">filename.pdf</p>
                         <p class="filesize">500kb</p>
                       </div>
                     </div>
-                    <img src="assets/close.png" alt="close" />
+                    <img src="./assets/close.png" alt="close" />
                   </div>
                 </div>
               </div>
@@ -424,70 +417,70 @@
                 <div class="tools">
                   <div class="tools-group">
                     <div class="tool">
-                      <img src="assets/Folder.png" alt="Folder" />
+                      <img src="./assets/Folder.png" alt="Folder" />
                       <p>فتح</p>
                     </div>
                     <div class="tool">
-                      <img src="assets/undo.png" alt="undo" />
+                      <img src="./assets/undo.png" alt="undo" />
                       <p>التراجع عن</p>
                     </div>
                     <div class="tool">
-                      <img src="assets/redo.png" alt="redo" />
+                      <img src="./assets/redo.png" alt="redo" />
                       <p>إعادة</p>
                     </div>
                   </div>
                   <div class="tools-group">
                     <div class="tool">
-                      <img src="assets/Image.png" alt="Image" />
+                      <img src="./assets/Image.png" alt="Image" />
                       <p>الصورة</p>
                     </div>
                     <div class="tool">
-                      <img src="assets/Table.png" alt="Table" />
+                      <img src="./assets/Table.png" alt="Table" />
                       <p>الجدول</p>
                     </div>
                     <div class="tool">
-                      <img src="assets/link.png" alt="link" />
+                      <img src="./assets/link.png" alt="link" />
                       <p>الارتباط</p>
                     </div>
                     <div class="tool">
-                      <img src="assets/Menu.png" alt="Menu" />
+                      <img src="./assets/Menu.png" alt="Menu" />
                       <p>الارتباط</p>
                     </div>
                   </div>
                   <div class="tools-group">
                     <div class="tool">
-                      <img src="assets/search.png" alt="Image" />
+                      <img src="./assets/search.png" alt="Image" />
                       <p>العثور</p>
                     </div>
                   </div>
                   <div class="tools-group">
                     <div class="tool">
-                      <img src="assets/Folder.png" alt="Folder" />
+                      <img src="./assets/Folder.png" alt="Folder" />
                       <p>التعليقات</p>
                     </div>
                     <div class="tool">
-                      <img src="assets/File minus.png" alt="minus" />
+                      <img src="./assets/File minus.png" alt="minus" />
                       <p>تعقب التغييرات</p>
                     </div>
                     <div class="tool">
                       <img
-                        src="assets/clipboard-text-alt_svgrepo.com.png"
+                        src="./assets/clipboard-text-alt_svgrepo.com.png"
                         alt="clipboard"
                       />
                       <p>الحافظة المحلية</p>
                     </div>
                     <div class="tool">
-                      <img src="assets/expand.png" alt="expand" />
+                      <img src="./assets/expand.png" alt="expand" />
                       <p>توسيع</p>
                     </div>
                   </div>
                 </div>
                 <div class="file-preview">
                   <div class="create">
-                    <img src="assets/id.png" alt="id" />
+                    <img src="./assets/id.png" alt="id" />
                     <span>إنشاء من نموذج الإدارة</span>
                   </div>
-                  <img src="assets/مذكرة.png" alt="مذكره" class="note" />
+                  <img src="./assets/مذكرة.png" alt="مذكره" class="note" />
                 </div>
               </div>
             </div>
