--- a/inbox.html
+++ b/inbox.html
@@ -22,7 +22,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -36,7 +36,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                   />
@@ -45,7 +45,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -59,7 +59,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -69,7 +69,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -83,7 +83,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -152,13 +152,15 @@
         <aside>
           <div class="top-options">
             <div class="back-arrow">
-              <a href="./"><img src="assets/arrow.png" alt="arrow" /></a>
+              <a href="./homepage.html"
+                ><img src="./assets/arrow.png" alt="arrow"
+              /></a>
             </div>
             <div class="logo-cont">
-              <a href="">
-                <img src="assets/Group 2.png" alt="logo" />
+              <a href="./homepage.html">
+                <img src="./assets/Group 2.png" alt="logo" />
                 <img
-                  src="assets/Group 3.png"
+                  src="./assets/Group 3.png"
                   alt="name"
                   class="name"
                   style="max-width: 60%"
@@ -167,7 +169,7 @@
             </div>
           </div>
           <div class="user-info">
-            <img src="assets/Avatar.png" alt="Avatar" />
+            <img src="./assets/Avatar.png" alt="Avatar" />
             <div class="user-name">
               <p>أحمد أحمد</p>
               <p>المدير العام</p>
@@ -183,45 +185,45 @@
           <div class="tabs">
             <ul>
               <li>
-                <img src="assets/home.png" />
+                <img src="./assets/home.png" />
                 <a href="./homepage.html"> الرئيسية</a>
               </li>
               <li class="active">
-                <img src="assets/directbox-receive.png" />
+                <img src="./assets/directbox-receive.png" />
                 <a href="./inbox.html">البريد الوارد</a>
               </li>
               <li>
-                <img src="assets/directbox-send.png" />
+                <img src="./assets/directbox-send.png" />
                 <a href="./sent.html">البريد الصادر</a>
                 <span>1</span>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./new-missions.html">المهام الجديدة</a>
               </li>
               <li>
-                <img src="assets/stickynote.png" />
+                <img src="./assets/stickynote.png" />
                 <a href="./draft.html">المسودة</a>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./publicity.html">التعميمات</a>
               </li>
               <li>
-                <img src="assets/document.png" />
+                <img src="./assets/document.png" />
                 <a href="./forwarded-tasks.html">متابعة المهام المحولة</a>
               </li>
               <li>
-                <img src="assets/search.png" />
+                <img src="./assets/search.png" />
                 <a href="./search-admin-files.html"> بحث</a>
               </li>
               <li>
-                <img src="assets/note.png" />
+                <img src="./assets/note.png" />
                 <a href="./records.html">التقارير</a>
               </li>
             </ul>
             <div class="signout">
-              <img src="assets/Logout.png" />
+              <img src="./assets/Logout.png" />
               <a href="">تسجيل الخروج</a>
             </div>
           </div>
@@ -231,22 +233,22 @@
           <div class="nav">
             <div class="time-wrapper">
               <div class="time">
-                <img src="assets/clock.png" alt="clock" />
+                <img src="./assets/clock.png" alt="clock" />
                 <span>12:46:43 PM</span>
               </div>
               <div class="date">
-                <img src="assets/calendar.png" alt="calendar" />
+                <img src="./assets/calendar.png" alt="calendar" />
                 <span>01-01-2025</span>
               </div>
             </div>
             <div class="help">
-              <a href=""><img src="assets/question.png" alt="question" /></a>
+              <a href=""><img src="./assets/question.png" alt="question" /></a>
               <a href=""
-                ><img src="assets/support_svgrepo.com.png" alt="support"
+                ><img src="./assets/support_svgrepo.com.png" alt="support"
               /></a>
               <div>
                 <img
-                  src="assets/notification.png"
+                  src="./assets/notification.png"
                   alt="support"
                   class="notify"
                 />
@@ -265,13 +267,13 @@
           <div class="actions">
             <div class="docs">
               <div class="img-action">
-                <img src="assets/print.png" alt="print" class="print" />
+                <img src="./assets/print.png" alt="print" class="print" />
               </div>
               <div class="img-action">
-                <img src="assets/export.png" alt="export" class="export" />
+                <img src="./assets/export.png" alt="export" class="export" />
               </div>
               <div class="img-action">
-                <img src="assets/filter.png" alt="filter" class="filter" />
+                <img src="./assets/filter.png" alt="filter" class="filter" />
               </div>
             </div>
             <form class="search">
@@ -300,22 +302,22 @@
                   <p>إجراءات</p>
                 </div>
                 <div class="action-items">
-                  <div><img src="assets/read.png" alt="read" /></div>
-                  <div><img src="assets/back.png" alt="read" /></div>
-                  <div><img src="assets/book.png" alt="read" /></div>
-                  <div><img src="assets/done.png" alt="read" /></div>
+                  <div><img src="./assets/read.png" alt="read" /></div>
+                  <div><img src="./assets/back.png" alt="read" /></div>
+                  <div><img src="./assets/book.png" alt="read" /></div>
+                  <div><img src="./assets/done.png" alt="read" /></div>
                 </div>
                 <div class="action-items">
-                  <div><img src="assets/read.png" alt="read" /></div>
-                  <div><img src="assets/back.png" alt="read" /></div>
-                  <div><img src="assets/book.png" alt="read" /></div>
-                  <div><img src="assets/done.png" alt="read" /></div>
+                  <div><img src="./assets/read.png" alt="read" /></div>
+                  <div><img src="./assets/back.png" alt="read" /></div>
+                  <div><img src="./assets/book.png" alt="read" /></div>
+                  <div><img src="./assets/done.png" alt="read" /></div>
                 </div>
                 <div class="action-items">
-                  <div><img src="assets/read.png" alt="read" /></div>
-                  <div><img src="assets/back.png" alt="read" /></div>
-                  <div><img src="assets/book.png" alt="read" /></div>
-                  <div><img src="assets/done.png" alt="read" /></div>
+                  <div><img src="./assets/read.png" alt="read" /></div>
+                  <div><img src="./assets/back.png" alt="read" /></div>
+                  <div><img src="./assets/book.png" alt="read" /></div>
+                  <div><img src="./assets/done.png" alt="read" /></div>
                 </div>
               </div>
               <div class="column">
@@ -428,7 +430,7 @@
                 <label for="lines">الاسطر بالصفحه</label>
               </div>
               <div class="pages">
-                <div><img src="assets/arrow-right.png" alt="left" /></div>
+                <div><img src="./assets/arrow-right.png" alt="left" /></div>
                 <div class="page-numbers">
                   <a>4</a>
                   <a>3</a>
@@ -436,7 +438,7 @@
                   <a>2</a>
                   <a class="active">1</a>
                 </div>
-                <div><img src="assets/arrow-left.png" alt="left" /></div>
+                <div><img src="./assets/arrow-left.png" alt="left" /></div>
               </div>
               <div class="total">
                 <p>المجموع 57</p>
