--- a/main.html
+++ b/main.html
@@ -13,44 +13,44 @@
         <div class="header-stats">
           <div class="back-arrow">
             <a href="./index.html"
-              ><img src="assets/arrow.png" alt="arrow"
+              ><img src="./assets/arrow.png" alt="arrow"
             /></a>
           </div>
           <!-- Logo -->
           <div class="logo-cont">
             <a href="./">
-              <img src="assets/Group 2.png" alt="logo" />
-              <img src="assets/Group 3.png" alt="name" />
+              <img src="./assets/Group 2.png" alt="logo" />
+              <img src="./assets/Group 3.png" alt="name" />
             </a>
           </div>
           <!-- End Logo -->
           <div class="time-wrapper">
             <div class="time">
-              <img src="assets/clock.png" alt="clock" />
+              <img src="./assets/clock.png" alt="clock" />
               <span>12:46:43 PM</span>
             </div>
             <div class="date">
-              <img src="assets/calendar.png" alt="calendar" />
+              <img src="./assets/calendar.png" alt="calendar" />
               <span>01-01-2025</span>
             </div>
           </div>
         </div>
         <div class="header-info">
           <div class="help">
-            <a href=""><img src="assets/question.png" alt="question" /></a>
+            <a href=""><img src="./assets/question.png" alt="question" /></a>
             <a href=""
-              ><img src="assets/support_svgrepo.com.png" alt="support"
+              ><img src="./assets/support_svgrepo.com.png" alt="support"
             /></a>
           </div>
           <div class="user-info">
-            <img src="assets/Avatar.png" alt="Avatar" />
+            <img src="./assets/Avatar.png" alt="Avatar" />
             <div class="user-name">
               <p>أحمد أحمد</p>
               <p>المدير العام</p>
             </div>
           </div>
-          <a href="/" style="margin-right: 30px">
-            <img src="assets/Frame 1686553493.png" alt="signout" />
+          <a href="./" style="margin-right: 30px">
+            <img src="./assets/Frame 1686553493.png" alt="signout" />
           </a>
         </div>
       </div>
@@ -63,39 +63,39 @@
     <main style="background-color: #e0e0e0">
       <div class="sections">
         <a class="section-card" href="./homepage.html">
-          <img src="assets/logo2.png" alt="logo" />
+          <img src="./assets/logo2.png" alt="logo" />
           <h2>التراسل الإلكتروني</h2>
         </a>
         <a class="section-card">
-          <img src="assets/logo2.png" alt="logo" />
+          <img src="./assets/logo2.png" alt="logo" />
           <h2>نظام الهياكل</h2>
         </a>
-        <a class="section-card">
-          <img src="assets/logo2.png" alt="logo" />
+        <a class="section-card" href="./kuwait-today.html">
+          <img src="./assets/logo2.png" alt="logo" />
           <h2>الكويت اليوم</h2>
         </a>
         <a class="section-card">
-          <img src="assets/logo2.png" alt="logo" />
+          <img src="./assets/logo2.png" alt="logo" />
           <h2>ملفات الإرشادات</h2>
         </a>
-        <a class="section-card">
-          <img src="assets/logo2.png" alt="logo" />
+        <a class="section-card" href="./administration.html">
+          <img src="./assets/logo2.png" alt="logo" />
           <h2>الشئون الادارية - الملف الإداري</h2>
         </a>
-        <a class="section-card">
-          <img src="assets/logo2.png" alt="logo" />
+        <a class="section-card" href="./financial.html">
+          <img src="./assets/logo2.png" alt="logo" />
           <h2>الشئون الادارية - الإستثمارات</h2>
         </a>
-        <a class="section-card">
-          <img src="assets/logo2.png" alt="logo" />
+        <a class="section-card" href="./secret-files.html">
+          <img src="./assets/logo2.png" alt="logo" />
           <h2>الشئون الادارية - الملف السري</h2>
         </a>
-        <a class="section-card">
-          <img src="assets/logo2.png" alt="logo" />
+        <a class="section-card" href="./search-admin-files.html">
+          <img src="./assets/logo2.png" alt="logo" />
           <h2>بحث ملفات الإدارة</h2>
         </a>
-        <a class="section-card">
-          <img src="assets/logo2.png" alt="logo" />
+        <a class="section-card" href="./search-bonus-history.html">
+          <img src="./assets/logo2.png" alt="logo" />
           <h2>نظام سجلات مكافأة نهاية الخدمة</h2>
         </a>
       </div>
