--- a/forwarded-tasks.html
+++ b/forwarded-tasks.html
@@ -22,7 +22,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -36,7 +36,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                   />
@@ -45,7 +45,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -59,7 +59,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -69,7 +69,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -83,7 +83,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -153,13 +153,15 @@
         <aside>
           <div class="top-options">
             <div class="back-arrow">
-              <a href="./"><img src="assets/arrow.png" alt="arrow" /></a>
+              <a href="./homepage.html"
+                ><img src="./assets/arrow.png" alt="arrow"
+              /></a>
             </div>
             <div class="logo-cont">
-              <a href="">
-                <img src="assets/Group 2.png" alt="logo" />
+              <a href="./homepage.html">
+                <img src="./assets/Group 2.png" alt="logo" />
                 <img
-                  src="assets/Group 3.png"
+                  src="./assets/Group 3.png"
                   alt="name"
                   class="name"
                   style="max-width: 60%"
@@ -168,7 +170,7 @@
             </div>
           </div>
           <div class="user-info">
-            <img src="assets/Avatar.png" alt="Avatar" />
+            <img src="./assets/Avatar.png" alt="Avatar" />
             <div class="user-name">
               <p>أحمد أحمد</p>
               <p>المدير العام</p>
@@ -184,45 +186,45 @@
           <div class="tabs">
             <ul>
               <li>
-                <img src="assets/home.png" />
+                <img src="./assets/home.png" />
                 <a href="./homepage.html"> الرئيسية</a>
               </li>
               <li>
-                <img src="assets/directbox-receive.png" />
+                <img src="./assets/directbox-receive.png" />
                 <a href="./inbox.html">البريد الوارد</a>
               </li>
               <li>
-                <img src="assets/directbox-send.png" />
+                <img src="./assets/directbox-send.png" />
                 <a href="./sent.html">البريد الصادر</a>
                 <span>1</span>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./new-missions.html">المهام الجديدة</a>
               </li>
               <li>
-                <img src="assets/stickynote.png" />
+                <img src="./assets/stickynote.png" />
                 <a href="./draft.html">المسودة</a>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./publicity.html">التعميمات</a>
               </li>
               <li class="active">
-                <img src="assets/document.png" />
+                <img src="./assets/document.png" />
                 <a href="./forwarded-tasks.html">متابعة المهام المحولة</a>
               </li>
               <li>
-                <img src="assets/search.png" />
+                <img src="./assets/search.png" />
                 <a href="./search-admin-files.html"> بحث</a>
               </li>
               <li>
-                <img src="assets/note.png" />
+                <img src="./assets/note.png" />
                 <a href="./records.html">التقارير</a>
               </li>
             </ul>
             <div class="signout">
-              <img src="assets/Logout.png " />
+              <img src="./assets/Logout.png " />
               <a href="">تسجيل الخروج</a>
             </div>
           </div>
@@ -232,22 +234,22 @@
           <div class="nav">
             <div class="time-wrapper">
               <div class="time">
-                <img src="assets/clock.png" alt="clock" />
+                <img src="./assets/clock.png" alt="clock" />
                 <span>12:46:43 PM</span>
               </div>
               <div class="date">
-                <img src="assets/calendar.png" alt="calendar" />
+                <img src="./assets/calendar.png" alt="calendar" />
                 <span>01-01-2025</span>
               </div>
             </div>
             <div class="help">
-              <a href=""><img src="assets/question.png" alt="question" /></a>
+              <a href=""><img src="./assets/question.png" alt="question" /></a>
               <a href=""
-                ><img src="assets/support_svgrepo.com.png" alt="support"
+                ><img src="./assets/support_svgrepo.com.png" alt="support"
               /></a>
               <div>
                 <img
-                  src="assets/notification.png"
+                  src="./assets/notification.png"
                   alt="support"
                   class="notify"
                 />
@@ -268,13 +270,13 @@
           <div class="actions">
             <div class="docs">
               <div class="img-action">
-                <img src="assets/print.png" alt="print" class="print" />
+                <img src="./assets/print.png" alt="print" class="print" />
               </div>
               <div class="img-action">
-                <img src="assets/export.png" alt="export" class="export" />
+                <img src="./assets/export.png" alt="export" class="export" />
               </div>
               <div class="img-action">
-                <img src="assets/filter.png" alt="filter" class="filter" />
+                <img src="./assets/filter.png" alt="filter" class="filter" />
               </div>
             </div>
             <form class="search">
@@ -298,10 +300,10 @@
             <div class="data-row">
               <p class="col-index">1</p>
               <div class="col-head">
-                <div><img src="assets/read.png" alt="read" /></div>
-                <div><img src="assets/back.png" alt="read" /></div>
-                <div><img src="assets/book.png" alt="read" /></div>
-                <div><img src="assets/done.png" alt="read" /></div>
+                <div><img src="./assets/read.png" alt="read" /></div>
+                <div><img src="./assets/back.png" alt="read" /></div>
+                <div><img src="./assets/book.png" alt="read" /></div>
+                <div><img src="./assets/done.png" alt="read" /></div>
               </div>
               <p class="col-head">موضوع الاستثناءات</p>
               <p class="col-head">05/12/2024</p>
@@ -335,7 +337,7 @@
                   "
                 >
                   تم التسليم
-                  <img src="assets/blue.png" class="blue" />
+                  <img src="./assets/blue.png" class="blue" />
                 </p>
               </div>
               <div
@@ -343,7 +345,7 @@
                 style="margin-right: 20px; display: flex; align-items: center"
               >
                 <img
-                  src="assets/arrow-down.png"
+                  src="./assets/arrow-down.png"
                   alt="arrow"
                   class="expand"
                   width="10px"
@@ -353,11 +355,11 @@
             </div>
             <div class="details-data">
               <div class="details-tabs">
-                <a href="/" class="active">تدفق العمل 1</a>
-                <a href="/"
-                  >تدفق العمل 2 <img src="assets/Ellipse 2323.png" alt="red"
+                <a href="" class="active">تدفق العمل 1</a>
+                <a href=""
+                  >تدفق العمل 2 <img src="./assets/Ellipse 2323.png" alt="red"
                 /></a>
-                <a href="/">تدفق العمل 3 </a>
+                <a href="">تدفق العمل 3 </a>
               </div>
               <div class="details">
                 <div class="details-header">
@@ -369,7 +371,7 @@
                 <div class="details">
                   <div class="single-detail">
                     <div>
-                      <img src="assets/exchange2.png" alt="exchange2" />
+                      <img src="./assets/exchange2.png" alt="exchange2" />
                     </div>
                     <div class="detail-col">
                       <p class="title">إجراءات الدراسة</p>
@@ -416,7 +418,7 @@
                 <label for="lines">الاسطر بالصفحه</label>
               </div>
               <div class="pages">
-                <div><img src="assets/arrow-right.png" alt="left" /></div>
+                <div><img src="./assets/arrow-right.png" alt="left" /></div>
                 <div class="page-numbers">
                   <a>4</a>
                   <a>3</a>
@@ -424,7 +426,7 @@
                   <a>2</a>
                   <a class="active">1</a>
                 </div>
-                <div><img src="assets/arrow-left.png" alt="left" /></div>
+                <div><img src="./assets/arrow-left.png" alt="left" /></div>
               </div>
               <div class="total">
                 <p>المجموع 57</p>
