--- a/homepage.html
+++ b/homepage.html
@@ -22,7 +22,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -36,7 +36,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                   />
@@ -45,7 +45,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -59,7 +59,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -69,7 +69,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -83,7 +83,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -152,13 +152,15 @@
         <aside>
           <div class="top-options">
             <div class="back-arrow">
-              <a href="./"><img src="assets/arrow.png" alt="arrow" /></a>
+              <a href="./homepage.html"
+                ><img src="./assets/arrow.png" alt="arrow"
+              /></a>
             </div>
             <div class="logo-cont">
-              <a href="">
-                <img src="assets/Group 2.png" alt="logo" />
+              <a href="./homepage.html">
+                <img src="./assets/Group 2.png" alt="logo" />
                 <img
-                  src="assets/Group 3.png"
+                  src="./assets/Group 3.png"
                   alt="name"
                   class="name"
                   style="max-width: 60%"
@@ -167,7 +169,7 @@
             </div>
           </div>
           <div class="user-info">
-            <img src="assets/Avatar.png" alt="Avatar" />
+            <img src="./assets/Avatar.png" alt="Avatar" />
             <div class="user-name">
               <p>أحمد أحمد</p>
               <p>المدير العام</p>
@@ -183,45 +185,45 @@
           <div class="tabs">
             <ul>
               <li class="active">
-                <img src="assets/home.png" />
+                <img src="./assets/home.png" />
                 <a href="./homepage.html"> الرئيسية</a>
               </li>
               <li>
-                <img src="assets/directbox-receive.png" />
+                <img src="./assets/directbox-receive.png" />
                 <a href="./inbox.html">البريد الوارد</a>
               </li>
               <li>
-                <img src="assets/directbox-send.png" />
+                <img src="./assets/directbox-send.png" />
                 <a href="./sent.html">البريد الصادر</a>
                 <span>1</span>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./new-missions.html">المهام الجديدة</a>
               </li>
               <li>
-                <img src="assets/stickynote.png" />
+                <img src="./assets/stickynote.png" />
                 <a href="./draft.html">المسودة</a>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./publicity.html">التعميمات</a>
               </li>
               <li>
-                <img src="assets/document.png" />
+                <img src="./assets/document.png" />
                 <a href="./forwarded-tasks.html">متابعة المهام المحولة</a>
               </li>
               <li>
-                <img src="assets/search.png" />
+                <img src="./assets/search.png" />
                 <a href="./search-admin-files.html"> بحث</a>
               </li>
               <li>
-                <img src="assets/note.png" />
+                <img src="./assets/note.png" />
                 <a href="./records.html">التقارير</a>
               </li>
             </ul>
             <div class="signout">
-              <img src="assets/Logout.png" />
+              <img src="./assets/Logout.png" />
               <a href="">تسجيل الخروج</a>
             </div>
           </div>
@@ -231,22 +233,22 @@
           <div class="nav">
             <div class="time-wrapper">
               <div class="time">
-                <img src="assets/clock.png" alt="clock" />
+                <img src="./assets/clock.png" alt="clock" />
                 <span>12:46:43 PM</span>
               </div>
               <div class="date">
-                <img src="assets/calendar.png" alt="calendar" />
+                <img src="./assets/calendar.png" alt="calendar" />
                 <span>01-01-2025</span>
               </div>
             </div>
             <div class="help">
-              <a href=""><img src="assets/question.png" alt="question" /></a>
+              <a href=""><img src="./assets/question.png" alt="question" /></a>
               <a href=""
-                ><img src="assets/support_svgrepo.com.png" alt="support"
+                ><img src="./assets/support_svgrepo.com.png" alt="support"
               /></a>
               <div>
                 <img
-                  src="assets/notification.png"
+                  src="./assets/notification.png"
                   alt="support"
                   class="notify"
                 />
@@ -259,42 +261,42 @@
             <div class="inbox-card">
               <p class="card-title">عدد الكتب الوارده</p>
               <div class="card-count">
-                <img src="assets/inbox1.png" alt="inbox" />
+                <img src="./assets/inbox1.png" alt="inbox" />
                 <p>354</p>
               </div>
             </div>
             <div class="inbox-card">
               <p class="card-title">عدد الكتب الوارده</p>
               <div class="card-count">
-                <img src="assets/inbox1.png" alt="inbox" />
+                <img src="./assets/inbox1.png" alt="inbox" />
                 <p>354</p>
               </div>
             </div>
             <div class="inbox-card">
               <p class="card-title">عدد الكتب الوارده</p>
               <div class="card-count">
-                <img src="assets/inbox2.png" alt="inbox" />
+                <img src="./assets/inbox2.png" alt="inbox" />
                 <p>354</p>
               </div>
             </div>
             <div class="inbox-card">
               <p class="card-title">عدد الكتب الوارده</p>
               <div class="card-count">
-                <img src="assets/inbox1.png" alt="inbox" />
+                <img src="./assets/inbox1.png" alt="inbox" />
                 <p>354</p>
               </div>
             </div>
             <div class="inbox-card">
               <p class="card-title">عدد الكتب الوارده</p>
               <div class="card-count">
-                <img src="assets/inbox3.png" alt="inbox" />
+                <img src="./assets/inbox3.png" alt="inbox" />
                 <p>354</p>
               </div>
             </div>
           </div>
           <!-- End inbox Stats -->
           <!-- Start choose ministry -->
-          <div class="choose-ministry">
+          <div class="choose-ministry full">
             <div class="choice">
               <label for="ministry">اختر الإدارة</label>
               <select name="ministry" id="ministry">
@@ -302,7 +304,7 @@
               </select>
             </div>
             <a href="">
-              <img src="assets/filter.png" alt="filter" />
+              <img src="./assets/filter.png" alt="filter" />
             </a>
           </div>
           <!-- End choose ministry -->
@@ -313,7 +315,7 @@
                 <div class="single-statistic">
                   <div class="statistic-title">
                     <p>معاملات الواردة حسب الإدارة</p>
-                    <img src="assets/tooltip.png" alt="tooltip" />
+                    <img src="./assets/tooltip.png" alt="tooltip" />
                   </div>
                   <div class="chart">
                     <canvas id="myChart"></canvas>
@@ -324,7 +326,7 @@
                 <div class="single-statistic">
                   <div class="statistic-title">
                     <p>معاملات الواردة حسب الإدارة</p>
-                    <img src="assets/tooltip.png" alt="tooltip" />
+                    <img src="./assets/tooltip.png" alt="tooltip" />
                   </div>
                   <div class="chart">
                     <canvas id="myChart2"></canvas>
@@ -337,7 +339,7 @@
                 <div class="single-statistic">
                   <div class="statistic-title">
                     <p>معاملات الواردة حسب الإدارة</p>
-                    <img src="assets/tooltip.png" alt="tooltip" />
+                    <img src="./assets/tooltip.png" alt="tooltip" />
                   </div>
                   <div class="chart">
                     <canvas id="myChart4"></canvas>
@@ -348,7 +350,7 @@
                 <div class="single-statistic">
                   <div class="statistic-title">
                     <p>معاملات الواردة حسب الإدارة</p>
-                    <img src="assets/tooltip.png" alt="tooltip" />
+                    <img src="./assets/tooltip.png" alt="tooltip" />
                   </div>
                   <div class="chart">
                     <canvas id="myChart3"></canvas>
@@ -361,7 +363,7 @@
                 <div class="single-statistic">
                   <div class="statistic-title">
                     <p>معاملات الواردة حسب الإدارة</p>
-                    <img src="assets/tooltip.png" alt="tooltip" />
+                    <img src="./assets/tooltip.png" alt="tooltip" />
                   </div>
                   <div class="chart">
                     <canvas id="myChart5"></canvas>
@@ -372,7 +374,7 @@
                 <div class="single-statistic">
                   <div class="statistic-title">
                     <p>معاملات الواردة حسب الإدارة</p>
-                    <img src="assets/tooltip.png" alt="tooltip" />
+                    <img src="./assets/tooltip.png" alt="tooltip" />
                   </div>
                   <div class="chart">
                     <canvas id="myChart6"></canvas>
@@ -387,11 +389,11 @@
             <div class="activity">
               <div class="statistic-title">
                 <p>اخر النشاطات</p>
-                <img src="assets/tooltip.png" alt="tooltip" />
+                <img src="./assets/tooltip.png" alt="tooltip" />
               </div>
               <div class="activity-list">
                 <div class="single-activity">
-                  <img src="assets/Avatar.png" alt="user" />
+                  <img src="./assets/Avatar.png" alt="user" />
                   <div class="activity-details">
                     <p class="activity-title">
                       تم استقبال وارد من قبل
@@ -401,7 +403,7 @@
                   </div>
                 </div>
                 <div class="single-activity">
-                  <img src="assets/Avatar.png" alt="user" />
+                  <img src="./assets/Avatar.png" alt="user" />
                   <div class="activity-details">
                     <p class="activity-title">
                       تم استقبال وارد من قبل
@@ -411,7 +413,7 @@
                   </div>
                 </div>
                 <div class="single-activity">
-                  <img src="assets/Avatar.png" alt="user" />
+                  <img src="./assets/Avatar.png" alt="user" />
                   <div class="activity-details">
                     <p class="activity-title">
                       تم استقبال وارد من قبل
