--- a/search-results.html
+++ b/search-results.html
@@ -30,7 +30,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -44,7 +44,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                   />
@@ -53,7 +53,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -67,7 +67,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -77,7 +77,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -91,7 +91,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -160,13 +160,13 @@
         <aside>
           <div class="top-options">
             <div class="back-arrow">
-              <a href="./"><img src="assets/arrow.png" alt="arrow" /></a>
+              <a href="./"><img src="./assets/arrow.png" alt="arrow" /></a>
             </div>
             <div class="logo-cont">
-              <a href="">
-                <img src="assets/Group 2.png" alt="logo" />
+              <a href="./homepage.html">
+                <img src="./assets/Group 2.png" alt="logo" />
                 <img
-                  src="assets/Group 3.png"
+                  src="./assets/Group 3.png"
                   alt="name"
                   class="name"
                   style="max-width: 60%"
@@ -175,7 +175,7 @@
             </div>
           </div>
           <div class="user-info">
-            <img src="assets/Avatar.png" alt="Avatar" />
+            <img src="./assets/Avatar.png" alt="Avatar" />
             <div class="user-name">
               <p>أحمد أحمد</p>
               <p>المدير العام</p>
@@ -191,45 +191,45 @@
           <div class="tabs">
             <ul>
               <li>
-                <img src="assets/home.png" />
+                <img src="./assets/home.png" />
                 <a href="./homepage.html"> الرئيسية</a>
               </li>
               <li>
-                <img src="assets/directbox-receive.png" />
+                <img src="./assets/directbox-receive.png" />
                 <a href="./inbox.html">البريد الوارد</a>
               </li>
               <li>
-                <img src="assets/directbox-send.png" />
+                <img src="./assets/directbox-send.png" />
                 <a href="./sent.html">البريد الصادر</a>
                 <span>1</span>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./new-missions.html">المهام الجديدة</a>
               </li>
               <li>
-                <img src="assets/stickynote.png" />
+                <img src="./assets/stickynote.png" />
                 <a href="./draft.html">المسودة</a>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./publicity.html">التعميمات</a>
               </li>
               <li>
-                <img src="assets/document.png" />
+                <img src="./assets/document.png" />
                 <a href="./forwarded-tasks.html">متابعة المهام المحولة</a>
               </li>
               <li class="active">
-                <img src="assets/search.png" />
+                <img src="./assets/search.png" />
                 <a href="./search-admin-files.html"> بحث</a>
               </li>
               <li>
-                <img src="assets/note.png" />
+                <img src="./assets/note.png" />
                 <a href="./records.html">التقارير</a>
               </li>
             </ul>
             <div class="signout">
-              <img src="assets/Logout.png" />
+              <img src="./assets/Logout.png" />
               <a href="">تسجيل الخروج</a>
             </div>
           </div>
@@ -239,23 +239,23 @@
           <div class="nav" style="border-bottom: 1px solid #eee">
             <div class="time-wrapper">
               <div class="time">
-                <img src="assets/clock.png" alt="clock" />
+                <img src="./assets/clock.png" alt="clock" />
                 <span>12:46:43 PM</span>
               </div>
               <div class="date">
-                <img src="assets/calendar.png" alt="calendar" />
+                <img src="./assets/calendar.png" alt="calendar" />
                 <span>01-01-2025</span>
               </div>
             </div>
             <div class="help">
-              <a href=""><img src="assets/question.png" alt="question" /></a>
+              <a href=""><img src="./assets/question.png" alt="question" /></a>
               <a href=""
-                ><img src="assets/support_svgrepo.com.png" alt="support"
+                ><img src="./assets/support_svgrepo.com.png" alt="support"
               /></a>
               <div>
                 <img
                   class="notify"
-                  src="assets/notification.png"
+                  src="./assets/notification.png"
                   alt="support"
                 />
               </div>
@@ -266,7 +266,7 @@
           <div class="choose-ministry">
             <div class="choice">
               <a href="./homepage.html"
-                ><img src="assets/arrow.png" alt="arrow"
+                ><img src="./assets/arrow.png" alt="arrow"
               /></a>
               <p>نتائج البحث</p>
             </div>
@@ -280,13 +280,21 @@
               <div class="actions">
                 <div class="docs">
                   <div class="img-action">
-                    <img src="assets/print.png" alt="print" class="print" />
+                    <img src="./assets/print.png" alt="print" class="print" />
                   </div>
                   <div class="img-action">
-                    <img src="assets/export.png" alt="export" class="export" />
+                    <img
+                      src="./assets/export.png"
+                      alt="export"
+                      class="export"
+                    />
                   </div>
                   <div class="img-action">
-                    <img src="assets/filter.png" alt="filter" class="filter" />
+                    <img
+                      src="./assets/filter.png"
+                      alt="filter"
+                      class="filter"
+                    />
                   </div>
                 </div>
                 <form class="search">
@@ -348,7 +356,7 @@
                   <label for="lines">الاسطر بالصفحه</label>
                 </div>
                 <div class="pages">
-                  <div><img src="assets/arrow-right.png" alt="left" /></div>
+                  <div><img src="./assets/arrow-right.png" alt="left" /></div>
                   <div class="page-numbers">
                     <a>4</a>
                     <a>3</a>
@@ -356,7 +364,7 @@
                     <a>2</a>
                     <a class="active">1</a>
                   </div>
-                  <div><img src="assets/arrow-left.png" alt="left" /></div>
+                  <div><img src="./assets/arrow-left.png" alt="left" /></div>
                 </div>
                 <div class="total">
                   <p>المجموع 57</p>
